src/objects/Maintenance_Form__c.object
<CustomObject>
    <description>Contains the maintenance $ amounts by product for each account.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Maintenance_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Active = Paid Maintenance under current service contract</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beginning_Date__c</fullName>
        <label>Beginning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Custom_Solution__c</fullName>
        <label>Custom Solution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ending_Date__c</fullName>
        <label>Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GeoComm__c</fullName>
        <label>GeoComm</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inform_IQ_on_premise__c</fullName>
        <label>Inform IQ (on premise)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MNHS__c</fullName>
        <label>MNHS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maintenance_Total__c</fullName>
        <formula>VisionCAD__c +  Custom_Solution__c + VisionDATAVAULT__c +  VisionFBR__c +  VisionFIRE__c +  GeoComm__c +  VisionJAIL__c +  VisionLMS__c +  MNHS__c +  VisionMOBILE__c +  Other_3rd_Party__c +  VisionRMS__c +  XChange__c +  VisionFORCE__c +  VisionINFORM__c +  Misc__c +  Remote_Access__c +  Sales_Tax__c +  TriTech_com_IQ__c +  Inform_IQ_on_premise__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maintenance Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Misc__c</fullName>
        <label>Misc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_3rd_Party__c</fullName>
        <description>Renamed &quot;Other 3rd Party&quot; from &quot;Northpointe&quot; on 4/9/15</description>
        <label>Other 3rd Party</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the maintenance form</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Maintenance_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>VisiNet</fullName>
                </value>
                <value>
                    <fullName>VisionAIR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remote_Access__c</fullName>
        <label>Remote Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TriTech_com_IQ__c</fullName>
        <label>TriTech.com IQ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisionCAD__c</fullName>
        <label>VisionCAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisionDATAVAULT__c</fullName>
        <label>VisionDATAVAULT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisionFBR__c</fullName>
        <label>VisionFBR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisionFIRE__c</fullName>
        <label>VisionFIRE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisionFORCE__c</fullName>
        <label>VisionFORCE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisionINFORM__c</fullName>
        <label>VisionINFORM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisionJAIL__c</fullName>
        <label>VisionJAIL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisionLMS__c</fullName>
        <label>VisionLMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisionMOBILE__c</fullName>
        <label>VisionMOBILE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisionRMS__c</fullName>
        <label>VisionRMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>XChange__c</fullName>
        <label>XChange</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Maintenance Form</label>
    <nameField>
        <label>Maintenance Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>